# ctptest

./: CMakeLists.txt  MyTrSpi.cpp  MyTrSpi.h  MymdSpi.cpp  MymdSpi.h  testctp.cpp  testctp.h
